Fixes spacing of product description on mobile and tablet version (DT-1314)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1899,6 +1899,13 @@ select, input[type=search] {
 }
 
 
+.ecom-product-long-description {
+  @media @tablet {
+    margin: 1em 0;
+  }
+}
+
+
 /* ===============================
    IPAD WIDTH
    =============================== */
